[project]
name = "rust-coreutils"
version = "0.0.1"
authors = ["don <don@0xbeef.org>"]

[dependencies]
getopts = "0.2.10"
docopt = "*"
rustc-serialize = "*"
time = "*"

[[bin]]
name = "echo"
path = "src/echo/echo.rs"

[[bin]]
name = "false"
path = "src/false/false.rs"

[[bin]]
name = "touch"
path = "src/touch/touch.rs"

[[bin]]
name = "true"
path = "src/true/true.rs"

[[bin]]
name = "base64"
path = "src/base64/base64.rs"

[lib]
name = "libddate"
path = "src/ddate/mod.rs"
[[bin]]
name = "ddate"
path = "src/ddate/main.rs"
